fix infinity-laoder getting stuck in the viewport

--- a/app/styles/hypertable.less
+++ b/app/styles/hypertable.less
@@ -27,5 +27,7 @@
 }
 
 .hypertable__infinity-loader {
+  height: 1px;
+  width: 1px;
   opacity: 0;
 }
